--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="bundle.js"></script>
+  <script src="http://127.0.0.1:5000/public/bundle.js"></script>
 </body>
 </html>
